--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+*.csv
+
 # User-specific files
 *.rsuser
 *.suo
@@ -33,8 +35,9 @@ bld/
 [Ll]og/
 [Ll]ogs/
 
-# Visual Studio 2015/2017 cache/options directory
 .vs/
+# Visual Studio 2015/2017 cache/options directory
+
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
